--- a/buyer.html
+++ b/buyer.html
@@ -128,7 +128,7 @@ placeholder="Search flowers">
 <div id="profile" class="section">
 
 <img id="avatar"
-src="https://via.placeholder.com/100"
+src="default-avatar.png"
 width="100">
 
 <input type="file" onchange="uploadAvatar(event)">
